corrigindo bug na ordem de execução do insert